# AI-Real-Estate-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PRD.md  README.md  docker-compose.yml  model_quality_improvements.md  pyproject.toml  render.yaml
.streamlit/: config.toml
app/: main.py  schemas.py  ui.py
app/routers/: health.py  insights.py  predict.py
data/processed/: X_test.csv  X_train.csv  X_val.csv  feature_metadata.json  y_test.csv  y_train.csv  y_val.csv
models/: best_model_v1.joblib  training_stats.json
notebooks/: 01_eda_and_visualization.ipynb  02_data_cleaning_and_preprocessing.ipynb  03_feature_selection_and_training.ipynb
notebooks_temp/: 01_eda_and_visualization.ipynb  02_data_cleaning_and_preprocessing.ipynb  03_feature_selection_and_training.ipynb
src/: config.py  database.py  llm_chain.py  ml_pipeline.py  predictor.py  prompts.py  schemas.py
tests/: test_llm_chain.py  test_main.py  test_ml_pipeline.py  test_predictor.py  test_schemas.py
ui/: app.py  styles.py
ui/pages/: dashboard.py  predictions_data.py  trained_data.py
